--- a/HealingBeacon/app/src/main/AndroidManifest.xml
+++ b/HealingBeacon/app/src/main/AndroidManifest.xml
@@ -2,14 +2,34 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="sithlords.com.healingbeacon" >
 
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        <service
+            android:name="com.kontakt.sdk.android.manager.BeaconService"
+            android:exported="false" />
+        <service
+            android:name="com.kontakt.sdk.android.manager.ActionService"
+            android:exported="false" />
+
+        <meta-data
+            android:name="kontakt.io.API_KEY"
+            android:value="xsZdLraWgZaKmQBEdShlPdqRTVvrFYLW" />
+
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name=".BeaconMonitorActivity"
+            android:label="@string/title_activity_beacon_monitor" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
