--- a/HealingBeacon/build.gradle
+++ b/HealingBeacon/build.gradle
@@ -15,6 +15,7 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        mavenCentral()
         maven { url 'http://repo.kontakt.io/repository/internal/' }
     }
 }
