--- a/HealingBeacon/app/src/main/AndroidManifest.xml
+++ b/HealingBeacon/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
             android:label="@string/app_name" >
         </activity>
         <activity
-            android:name=".BeaconMonitorActivity"
+            android:name=".BeaconRangeActivity"
             android:label="@string/title_activity_beacon_monitor" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
