--- a/HealingBeacon/app/build.gradle
+++ b/HealingBeacon/app/build.gradle
@@ -24,4 +24,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:21.0.3'
     compile 'com.kontakt.sdk.android:library:1.0.6'
     compile group: 'com.google.guava', name: 'guava', version: '18.0'
+    compile 'org.springframework.android:spring-android-rest-template:1.0.1.RELEASE'
 }
