--- a/HealingBeacon/app/src/main/AndroidManifest.xml
+++ b/HealingBeacon/app/src/main/AndroidManifest.xml
@@ -26,6 +26,10 @@
         <activity
             android:name=".BeaconRangeActivity"
             android:label="@string/title_activity_beacon_monitor" >
+        </activity>
+        <activity
+            android:name=".patients.PatientsInRange"
+            android:label="@string/title_activity_patients_in_range" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
