--- a/HealingBeacon/app/build.gradle
+++ b/HealingBeacon/app/build.gradle
@@ -45,4 +45,5 @@ dependencies {
     compile group: 'com.google.guava', name: 'guava', version: '18.0'
     compile 'org.springframework.android:spring-android-rest-template:1.0.1.RELEASE'
     compile 'com.fasterxml.jackson.core:jackson-databind:2.3.2'
+    compile 'com.github.PhilJay:MPAndroidChart:v2.1.0'
 }
