--- a/HealingBeacon/build.gradle
+++ b/HealingBeacon/build.gradle
@@ -17,5 +17,6 @@ allprojects {
         jcenter()
         mavenCentral()
         maven { url 'http://repo.kontakt.io/repository/internal/' }
+        maven { url "https://jitpack.io" }
     }
 }
