Added view for prescribed drugs

--- a/HealingBeacon/app/src/main/AndroidManifest.xml
+++ b/HealingBeacon/app/src/main/AndroidManifest.xml
@@ -40,6 +40,10 @@
             android:name=".patients.DashboardActivity"
             android:label="@string/title_activity_dashboard" >
         </activity>
+        <activity
+            android:name=".PrescribedDrugsActivity"
+            android:label="@string/title_activity_prescribed_drugs" >
+        </activity>
     </application>
 
 </manifest>
