Added view for laboratory tests results.

--- a/HealingBeacon/app/src/main/AndroidManifest.xml
+++ b/HealingBeacon/app/src/main/AndroidManifest.xml
@@ -48,6 +48,14 @@
             android:name=".PrescribedDrugsActivity"
             android:label="@string/title_activity_prescribed_drugs" >
         </activity>
+        <activity
+            android:name=".LaboratoryTestsActivity"
+            android:label="@string/title_activity_laboratory_tests" >
+        </activity>
+        <activity
+            android:name=".LaboratoryTestsResultsActivity"
+            android:label="@string/title_activity_laboratory_tests_results" >
+        </activity>
     </application>
 
 </manifest>
