Add dynamic test titles to laboratory tests

--- a/HealingBeacon/app/build.gradle
+++ b/HealingBeacon/app/build.gradle
@@ -46,4 +46,5 @@ dependencies {
     compile 'org.springframework.android:spring-android-rest-template:1.0.1.RELEASE'
     compile 'com.fasterxml.jackson.core:jackson-databind:2.3.2'
     compile 'com.github.PhilJay:MPAndroidChart:v2.1.0'
+    compile 'com.github.shell-software:fab:1.0.1'
 }
