Add 1st version of Notes
Without proper downloading notes (from files), saving notes into files and without any activity allowing to edit them

--- a/HealingBeacon/app/src/main/AndroidManifest.xml
+++ b/HealingBeacon/app/src/main/AndroidManifest.xml
@@ -66,8 +66,11 @@
             android:name=".HistoryActivity"
             android:label="@string/title_activity_history" >
         </activity>
+        <activity android:name=".patients.BloodPressureActivity" >
+        </activity>
         <activity
-            android:name=".patients.BloodPressureActivity" >
+            android:name=".NotesActivity"
+            android:label="@string/title_activity_notes" >
         </activity>
     </application>
 
